tests/machine/x/go/load_yaml.error
run error: exit status 1
# command-line-arguments
tests/machine/x/go/load_yaml.go:28:13: invalid operation: r (variable of type map[string]any) is not an interface
